Style the first card

--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,71 @@ header button {
     color: var(--color-text-color);
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: stretch;
+    gap: 20px;
+    margin-top: 20px;
+}
 
+.card {
+    display: flex;
+    gap: 10px;
+    background-color: var(--color-unread-card-background);
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.avatar {
+    width: 50px;
+    height: 50px;
+}
+
+.right-section {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.description {
+    display: flex;
+    gap: 10px;
+    
+}
+
+.description img {
+    width: 50px;
+    height: 50px;
+}
+
+.name {
+    color: var(--color-dark-text-color);
+    font-weight: 800;
+}
+
+.post {
+    color: var(--color-text-color);
+    font-weight: 800;
+}
+
+.hidden {
+    display: none;
+}
+
+.unread-dot {
+    font-size: 0.625rem;
+    vertical-align: text-top;
+    line-height: 2.25 ;
+}
+
+.private-message {
+    border: solid 1px var(--color-message-hover);
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 5px;
+}
 
 
 .attribution {
