--- a/styles/style.css
+++ b/styles/style.css
@@ -78,14 +78,13 @@ main {
 }
 
 .avatar {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 }
 
 .right-section {
     display: flex;
     flex-direction: column;
-    gap: 5px;
     color: var(--color-text-color);
 }
 
@@ -108,9 +107,9 @@ main {
     font-weight: 800;
 }
 
-.hidden {
+/* .hidden {
     display: none;
-}
+} */
 
 .unread-dot {
     font-size: 0.625rem;
@@ -122,7 +121,12 @@ main {
     border: solid 1px var(--color-message-hover);
     border-radius: 5px;
     padding: 20px;
-    margin-top: 5px;
+    margin-top: 10px;
+}
+
+.group {
+    font-weight: 800;
+    color: var(--color-primary-blue);
 }
 
 
